src/test/deca/context/valid/opArith/minus-float.deca
// Description:
//    Programme valide ayant pour but de tester la soustraction avec un flottant.
//
// Resultats:
//    c=0.5;
{
    float c = 2-1.5;
}