src/test/deca/context/invalid/opArith/unary-minus-not-with-float.deca
// Description:
//    Programme invalide ayant pour but de tester le unary minus avec un tableau.
//
// Resultats:
//    2 mod 0.5

{
    int[1] tab;
    float c = -tab;
}